# PainlessMG

./: .gitignore  CMakeLists.txt  README.md
lib/: CUDA_PROJECTIVE_TET_MESH.h
